[package]
name = "rust-domain"
version = "0.0.1-alpha0"
description = "I need a .rs domain, now!"
repository = "https://github.com/sassman/rust-domain-rs"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
edition = "2018"
keywords = ["commandline"]
categories = ["command-line-utilities"]
include = ["src/**/*", "LICENSE", "README.md"]

[badges.maintenance]
status = "experimental"

[[bin]]
name = "rust-domain"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
dialoguer = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
app_dirs2 = "2.3"
base64 = "0.13"


